# impacto-economico

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
data/: 44111777-R.json  data_anual_2023_44111777-R.json  data_anual_2024_44111777-R.json  sqm.xlsx
informador/: informador_1.py  informador_2.py
models/: models.py
observador/: observador_1.py  observador_2.py  sqm_2023.py
