[tool.poetry]
name = "impacto-economico"
version = "0.1.0"
description = ""
authors = ["Alvaro Diaz Valenzuela <alvaro@efaa.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
